# hydra

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FERSlib_Log.txt  Makefile  README.md  hydrafers.yaml  pyproject.toml
.github/workflows/: release.yml
cmake/mingw-shims/: WS2tcpip.h  WinSock2.h  Windows.h  Winusb.h
docs/: A5203_INTEGRATION_STUDY.md  CONTRACT.md  DEV_LOG.md  FEASIBILITY_STUDY.md  FERSLIB_OPTIMIZATION_NOTES.md  FILE_FORMAT.md  TODO.md  janus_config_example.txt  param_defs_reference.txt
native/bindings/: pyferslib.cpp
packaging/: README.md  build_appimage.sh  build_windows.bat  cross_build_windows.sh  hydrafers.desktop  hydrafers.iss  hydrafers.spec  launch_gui.py  mingw-w64-toolchain.cmake
src/hydrafers/: __init__.py  __main__.py
src/hydrafers/cli/: __init__.py  __main__.py  app.py  batch.py
src/hydrafers/config/: __init__.py  converter.py  default.yaml  default_5203.yaml  loader.py  schema.py  schema_5203.py
src/hydrafers/core/: __init__.py  device.py  engine.py  events.py  readout.py  ringbuffer.py  state.py  statistics.py  writer.py
src/hydrafers/gui/: __init__.py  __main__.py  config_form.py  icons.py  main_window.py  style.qss
src/hydrafers/gui/plots/: __init__.py  map2d.py  spectrum.py
src/hydrafers/gui/widgets/: __init__.py  led.py  sidebar.py  status_table.py
src/hydrafers/io/: __init__.py  formats.py  reader.py  writer_binary.py
src/pyfers/: __init__.py  board.py  enums.py  errors.py  events.py  system.py
tests/: conftest.py  test_config.py  test_core_histograms.py  test_engine_family.py  test_gui_mainwindow.py  test_gui_plots.py  test_io_5203.py  test_pyfers_board.py  test_pyfers_enums.py  test_pyfers_errors.py  test_pyfers_events.py  test_pyfers_family.py  test_pyfers_system.py
